Add `Besluittypen`, `Resultaten`, and `Zaakstatussen` resources, respective repositories, converters, HTTP client tests, OpenAPI schema updates, and bump Application version to 0.18.0.
